bench/tests/plans/snapshots/r#mod__plans__bsbm_explore__BSBM Explore - Q2 (Execution Plan).snap
---
source: bench/tests/plans/bsbm_explore.rs
expression: canonicalize_uuids(&string)
---
ProjectionExec: expr=[ENC_PT(label@0) as label, ENC_PT(comment@1) as comment, ENC_PT(producer@2) as producer, ENC_PT(productFeature@3) as productFeature, ENC_PT(propertyTextual1@4) as propertyTextual1, ENC_PT(propertyTextual2@5) as propertyTextual2, ENC_PT(propertyTextual3@6) as propertyTextual3, ENC_PT(propertyNumeric1@7) as propertyNumeric1, ENC_PT(propertyNumeric2@8) as propertyNumeric2, ENC_PT(propertyTextual4@9) as propertyTextual4, ENC_PT(propertyTextual5@10) as propertyTextual5, ENC_PT(propertyNumeric4@11) as propertyNumeric4]
  CrossJoinExec
    CrossJoinExec
      CrossJoinExec
        CrossJoinExec
          CrossJoinExec
            CrossJoinExec
              CrossJoinExec
                CrossJoinExec
                  CrossJoinExec
                    CrossJoinExec
                      CrossJoinExec
                        MemQuadPatternExec: , active_graph=Union of [DefaultGraph], subject=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer6/Product272>, predicate=<http://www.w3.org/2000/01/rdf-schema#label>, object=?label
                        MemQuadPatternExec: , active_graph=Union of [DefaultGraph], subject=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer6/Product272>, predicate=<http://www.w3.org/2000/01/rdf-schema#comment>, object=?comment
                      CoalesceBatchesExec: target_batch_size=8192
                        HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(p@0, p@0)], projection=[producer@2]
                          CoalesceBatchesExec: target_batch_size=8192
                            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(p@0, p@0)], projection=[p@0]
                              MemQuadPatternExec: , active_graph=Union of [DefaultGraph], subject=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer6/Product272>, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/producer>, object=?p
                              MemQuadPatternExec: , active_graph=Union of [DefaultGraph], subject=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer6/Product272>, predicate=<http://purl.org/dc/elements/1.1/publisher>, object=?p
                          MemQuadPatternExec: , active_graph=Union of [DefaultGraph], subject=?p, predicate=<http://www.w3.org/2000/01/rdf-schema#label>, object=?producer
                    CoalesceBatchesExec: target_batch_size=8192
                      HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(f@0, f@0)], projection=[productFeature@2]
                        MemQuadPatternExec: , active_graph=Union of [DefaultGraph], subject=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer6/Product272>, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature>, object=?f
                        MemQuadPatternExec: , active_graph=Union of [DefaultGraph], subject=?f, predicate=<http://www.w3.org/2000/01/rdf-schema#label>, object=?productFeature
                  MemQuadPatternExec: , active_graph=Union of [DefaultGraph], subject=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer6/Product272>, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyTextual1>, object=?propertyTextual1
                MemQuadPatternExec: , active_graph=Union of [DefaultGraph], subject=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer6/Product272>, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyTextual2>, object=?propertyTextual2
              MemQuadPatternExec: , active_graph=Union of [DefaultGraph], subject=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer6/Product272>, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyTextual3>, object=?propertyTextual3
            MemQuadPatternExec: , active_graph=Union of [DefaultGraph], subject=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer6/Product272>, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric1>, object=?propertyNumeric1
          MemQuadPatternExec: , active_graph=Union of [DefaultGraph], subject=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer6/Product272>, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric2>, object=?propertyNumeric2
        MemQuadPatternExec: , active_graph=Union of [DefaultGraph], subject=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer6/Product272>, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyTextual4>, object=?propertyTextual4
      MemQuadPatternExec: , active_graph=Union of [DefaultGraph], subject=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer6/Product272>, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyTextual5>, object=?propertyTextual5
    MemQuadPatternExec: , active_graph=Union of [DefaultGraph], subject=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer6/Product272>, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric4>, object=?propertyNumeric4
