bench/tests/plans/snapshots/r#mod__plans__bsbm_explore__BSBM Explore - Q2 (Initial).snap
---
source: bench/tests/plans/bsbm_explore.rs
expression: canonicalize_uuids(&explanation.initial_logical_plan.to_string())
---
Projection: ENV_PT(label) AS label, ENV_PT(comment) AS comment, ENV_PT(producer) AS producer, ENV_PT(productFeature) AS productFeature, ENV_PT(propertyTextual1) AS propertyTextual1, ENV_PT(propertyTextual2) AS propertyTextual2, ENV_PT(propertyTextual3) AS propertyTextual3, ENV_PT(propertyNumeric1) AS propertyNumeric1, ENV_PT(propertyNumeric2) AS propertyNumeric2, ENV_PT(propertyTextual4) AS propertyTextual4, ENV_PT(propertyTextual5) AS propertyTextual5, ENV_PT(propertyNumeric4) AS propertyNumeric4
  Projection: label, comment, producer, productFeature, propertyTextual1, propertyTextual2, propertyTextual3, propertyNumeric1, propertyNumeric2, propertyTextual4, propertyTextual5, propertyNumeric4
    SparqlJoin: Left 
      SparqlJoin: Left 
        SparqlJoin: Left 
          SparqlJoin: Inner 
            SparqlJoin: Inner 
              SparqlJoin: Inner 
                SparqlJoin: Inner 
                  SparqlJoin: Inner 
                    SparqlJoin: Inner 
                      SparqlJoin: Inner 
                        SparqlJoin: Inner 
                          SparqlJoin: Inner 
                            SparqlJoin: Inner 
                              SparqlJoin: Inner 
                                QuadPattern (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer6/Product272> <http://www.w3.org/2000/01/rdf-schema#label> ?label), active_graph: Union of [DefaultGraph] 
                                QuadPattern (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer6/Product272> <http://www.w3.org/2000/01/rdf-schema#comment> ?comment), active_graph: Union of [DefaultGraph] 
                              QuadPattern (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer6/Product272> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/producer> ?p), active_graph: Union of [DefaultGraph] 
                            QuadPattern (?p <http://www.w3.org/2000/01/rdf-schema#label> ?producer), active_graph: Union of [DefaultGraph] 
                          QuadPattern (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer6/Product272> <http://purl.org/dc/elements/1.1/publisher> ?p), active_graph: Union of [DefaultGraph] 
                        QuadPattern (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer6/Product272> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> ?f), active_graph: Union of [DefaultGraph] 
                      QuadPattern (?f <http://www.w3.org/2000/01/rdf-schema#label> ?productFeature), active_graph: Union of [DefaultGraph] 
                    QuadPattern (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer6/Product272> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyTextual1> ?propertyTextual1), active_graph: Union of [DefaultGraph] 
                  QuadPattern (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer6/Product272> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyTextual2> ?propertyTextual2), active_graph: Union of [DefaultGraph] 
                QuadPattern (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer6/Product272> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyTextual3> ?propertyTextual3), active_graph: Union of [DefaultGraph] 
              QuadPattern (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer6/Product272> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric1> ?propertyNumeric1), active_graph: Union of [DefaultGraph] 
            QuadPattern (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer6/Product272> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric2> ?propertyNumeric2), active_graph: Union of [DefaultGraph] 
          QuadPattern (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer6/Product272> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyTextual4> ?propertyTextual4), active_graph: Union of [DefaultGraph] 
        QuadPattern (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer6/Product272> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyTextual5> ?propertyTextual5), active_graph: Union of [DefaultGraph] 
      QuadPattern (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer6/Product272> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric4> ?propertyNumeric4), active_graph: Union of [DefaultGraph]
