bench/tests/plans/snapshots/r#mod__plans__bsbm_explore__BSBM Explore - Q3 (Initial).snap
---
source: bench/tests/plans/bsbm_explore.rs
expression: canonicalize_uuids(&explanation.initial_logical_plan.to_string())
---
Projection: ENV_PT(product) AS product, ENV_PT(label) AS label
  Limit: skip=0, fetch=10
    Projection: product, label
      Sort: ENV_SORT(ENV_PT(label)) ASC NULLS FIRST
        Filter: EBV(BOOLEAN_AS_TERM(coalesce(EBV(BOOLEAN_AS_TERM(coalesce(EBV(GT(ENC_TV(p1), ENC_TV(Struct({term_type:2,value:156,data_type:http://www.w3.org/2001/XMLSchema#integer,language_tag:})))), Boolean(false)) AND coalesce(EBV(LT(ENC_TV(p3), ENC_TV(Struct({term_type:2,value:152,data_type:http://www.w3.org/2001/XMLSchema#integer,language_tag:})))), Boolean(false)))), Boolean(false)) AND coalesce(EBV(BOOLEAN_AS_TERM(NOT EBV(ENC_TV(BOUND(testVar))))), Boolean(false))))
          SparqlJoin: Left 
            SparqlJoin: Inner 
              SparqlJoin: Inner 
                SparqlJoin: Inner 
                  SparqlJoin: Inner 
                    QuadPattern (?product <http://www.w3.org/2000/01/rdf-schema#label> ?label), active_graph: Union of [DefaultGraph] 
                    QuadPattern (?product <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType87>), active_graph: Union of [DefaultGraph] 
                  QuadPattern (?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature541>), active_graph: Union of [DefaultGraph] 
                QuadPattern (?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric1> ?p1), active_graph: Union of [DefaultGraph] 
              QuadPattern (?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric3> ?p3), active_graph: Union of [DefaultGraph] 
            SparqlJoin: Inner 
              QuadPattern (?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature553>), active_graph: Union of [DefaultGraph] 
              QuadPattern (?product <http://www.w3.org/2000/01/rdf-schema#label> ?testVar), active_graph: Union of [DefaultGraph]
